--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "web3": "^1.3.5"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
